[gd_scene load_steps=11 format=3 uid="uid://c45rx67eokeh2"]

[ext_resource type="Script" path="res://Mobs/Goblin/goblin.gd" id="1_6qqck"]
[ext_resource type="Texture2D" uid="uid://cw0fg4usihdsy" path="res://Mobs/Goblin/GoblinFighter.png" id="1_nv0cw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mov05"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu5bj"]
atlas = ExtResource("1_nv0cw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxhor"]
atlas = ExtResource("1_nv0cw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1sg6"]
atlas = ExtResource("1_nv0cw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_55nks"]
atlas = ExtResource("1_nv0cw")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r8wke"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu5bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxhor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1sg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55nks")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mmp2a"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hgina"]
color = Color(0.3455, 0.857232, 0.280942, 1)

[node name="Goblin" type="PathFollow2D"]
rotates = false
loop = false
script = ExtResource("1_6qqck")

[node name="Area2D" type="Area2D" parent="." groups=["mob"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mov05")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r8wke")
autoplay = "default"
frame_progress = 0.945614

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -9.0
offset_right = 8.0
offset_bottom = -8.0
theme_override_styles/background = SubResource("StyleBoxLine_mmp2a")
theme_override_styles/fill = SubResource("StyleBoxLine_hgina")
value = 50.0
show_percentage = false

[connection signal="died" from="." to="." method="_on_death"]
[connection signal="health_depleted" from="." to="." method="_on_health_depleted"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
